Security fix and profanity filter

--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.css
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.css
@@ -44,6 +44,7 @@ td {
   text-decoration: bold;
 }
 
-.mat-expansion-panel-header {
-
+.predictedPerformance {
+  display: flex;
+  justify-content: center;
 }
